--- a/style.css
+++ b/style.css
@@ -1,79 +1,236 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+} */
+/* .main{
+    width: 100%;
+    background: white;
+    height: 109vh;
+} */
+/* .navbar{
+    display: flex;
+    flex-direction: row;
+    width: 1200px;
+    height: 75px;
+    justify-content: center;
+   
+} */
+/* .icon{
+    
+    width: 200px;
+    height: 70px;
+} */
+/* .logo{
+    font-family: 'Secular One';
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 34.92px;
+    align-items: center;
+    letter-spacing: -0.29px;
+    color: #1D1D1D;
+} */
+/* .menu{
+    width: 400px;
+    height: 70px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+   
+    
+} */
+/* ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+} */
+
+/* ul li a {
+    padding: 10px 20px;
+    display: block;
+    text-decoration: none;
+} */
+/* .btn{
+        display: flex;    
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+} */
+/* li{
+    text-decoration: none;
+} */
+
+/* .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
-html,body{
-    font-family: 'Roboto', sans-serif;
+
+ul {
+    list-style: none;
+    /* flex-wrap: wrap; */
+    /* display: flex;
+    justify-content: center;
+} */ 
+
+/* .btn { */
+    /* align-items: end; */
+/* } */
+
+/* New css */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Secular+One&display=swap');
+
+
+
+* {
+    margin: 0;
+    padding: 0;
+    
+}
+
+html,
+body {
     font-size: 16px;
     width: 100vw;
     min-height: 100vh;
 }
 
-/* Nav container start */
-
-nav{
+nav {
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 65px;
-    background-color: #ddd;
-}
-.container{
-    width: 60%;
+    background-color: #fff;
+}    
+
+.container {
+    width: 100%;
     height: 100%;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: #ddd; */
+}
+
+.logo{
     display: flex;
     align-items: center;
 }
 
-/* nav container end */
-
-
-/* brand section start */
-
-.brand-section{
-    display: flex;
-    align-items: center;
-}
-.brand-logo{
+.logo-title{
     margin-right: 1rem;
-}
-.brand-logo span{
-    color: #000;
-    font-size: 2.5rem;
-}
-.brand-title a{
-    text-decoration: none;
-    color: #0f0f0f;
-}
-.brand-title h2{
    
 }
 
-/* brand section ends */
+.logo-title a{
+    color: #1D1D1D;
+    text-decoration: none;
+    font-family: 'Secular One', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 34.92px;
+    letter-spacing: -0.29px;
 
-
-/* Main menu section start */
+}
 
 .main-menu{
     display: flex;
-    margin-left: 2rem;
+    margin-left: 86px;
+    margin-right: 28px;
 }
-.main-menu a{
-    display: inline-block;
-    margin-right: 1rem;
+
+.main-menu a {
+    padding: 10px 20px;
+    display: block;
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    color: #000;
     text-decoration: none;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     letter-spacing: 2px;
-    
+
 }
-.main-menu a:hover{
-    text-decoration: underline;
+
+.main-menu a:hover {
+    
     color: #000;
 }
 
-/* main menu section ends */
+.button{
+    display: flex;
+}
 
+button{
+    /* background-color: #1361F5;
+    color: white; */
+    
+    /* padding: 10px 27px;
+    gap: 10px;
+    width: 147px;
+    height: 43px;
+    color: white;
+    background: #1361F5;
+    border-radius: 5px; */
+    
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #1361F5;
+    padding: 10px 27px;
+    border-style: solid;
+    border-width: 1px 1px 1px 1px;
+    border-color: #E0E0E0;
+    border-radius: 5px 5px 5px 5px;
+}
+.trans{
+    background-color: #1362f500;
+    color: #1361F5;
+    margin-right: 10px;
+}
 
+.trans:hover{
+    background-color: #1361F5;
+    color: #fff;
+}
 
+.sec{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 86.84px;
+    /* background-color: #1361F5; */
+}
+
+.heading{
+    font-family: 'Inter', sans-serif;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 50px;
+    letter-spacing: -1px;
+}
+p{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: -1px;
+}
+
+.content{
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter' sans-serif;
+    /* background-color: #869abf;
+     */
+}
